--- a/views/repairs/home.pug
+++ b/views/repairs/home.pug
@@ -1,4 +1,4 @@
 extends ../layouts/admin
 block content
-  section
-    h2(class="text-3xl font-semibold mb-4") Bienvenido a Mi Aplicación
+  section(data-aos="fade-down-right")
+    h2(class="text-3xl font-semibold mb-4 text-white") Bienvenido a Mi Aplicación
