--- a/views/client/edit.pug
+++ b/views/client/edit.pug
@@ -1,10 +1,10 @@
 extends ../layouts/admin
 
 block content
-  div(class="max-w-4xl w-full mx-auto p-8 bg-gray-800 rounded-lg shadow-lg")
+  div(class="max-w-4xl w-full mx-auto p-8 bg-gray-800 rounded-lg shadow-lg" data-aos="fade-down-right")
     h2(class="text-base md:text-4xl font-bold text-center mb-10 text-white")=page
 
-    form(method="POST" class="space-y-8" novalidate)
+    form(method="POST" class="space-y-8" novalidate )
       div( class="space-y-4")
         label(form="name" class="block text-sm text-gray-400 font-semibold") Nombre
         input(type="text" name="name" id="name" class="w-full px-4 py-2 bg-gray-700 rounded-lg placeholder-gray-400 outline-none text-gray-300 focus:ring-2 focus:ring-red-500 " placeholder="Nombre del cliente" value=client.name)
