--- a/views/client/panel.pug
+++ b/views/client/panel.pug
@@ -2,7 +2,7 @@ extends ../layouts/admin
 
 block content
 
-  div(class="max-w-7xl mx-auto")
+  div(class="max-w-7xl mx-auto" )
     h1(class="text-base md:text-4xl font-bold mb-6 text-center text-white")=page
 
     div(class="mb-6")
@@ -17,7 +17,7 @@ block content
 
 
     div(class="overflow-x-auto"  )
-      table(class="w-full table-auto bg-gray-800 rounded-md shadow-lg" data-aos="flip-left")
+      table(class="w-full table-auto bg-gray-800 rounded-md shadow-lg" data-aos="zoom-in-down")
         thead(class="text-white text-xs sm:text-sm")
           tr(class="bg-gray-700")
             th(class="px-4 py-2") Nombre
