--- a/views/template/message-index.pug
+++ b/views/template/message-index.pug
@@ -2,7 +2,7 @@ extends ../layouts/index
 
 block content 
 
-  div.mt-32.max-w-4xl.mx-auto
+  div.mt-32.max-w-4xl.mx-auto(data-aos="fade-right")
     h3(class="text-2xl py-2 font-bold text-center text-white")=page 
       p(class=success ? "bg-green-700" : "bg-red-600").text-center.text-white.rounded-lg.my-5.p-2=message
 
