--- a/views/auth/login.pug
+++ b/views/auth/login.pug
@@ -4,7 +4,7 @@ block content
   div(class=" w-full max-w-xl mx-auto flex flex-col mt-16 md:mt-40")
     h1(class="text-center text-white text-xl  md:text-3xl font-bold border-red-300 ")=page
     if errores 
-      div(id="errores" class="text-center rounded-md mt-10")
+      div(class="errors text-center rounded-md mt-10")
         each error in errores 
           p(class="text-white bg-red-600 my-2 text-center text-sm md:text-lg py-2 rounded-lg")=error.msg
 
