--- a/views/auth/reset-password.pug
+++ b/views/auth/reset-password.pug
@@ -4,7 +4,7 @@ block content
   div(class="max-w-sm md:max-w-xl mx-auto flex flex-col mt-16 md:mt-40")
     h1(class="text-center text-white text-xl  md:text-3xl font-bold border-red-300 cssanimation hu__hu__")=page
     if errores 
-      div(id="errores" class="text-center rounded-md mt-10")
+      div(id="errors" class="errors text-center rounded-md mt-10")
         each error in errores 
           p(class="text-white bg-red-600 my-2 text-center text-sm md:text-lg py-2 rounded-lg")=error.msg
 
