--- a/views/client/panel.pug
+++ b/views/client/panel.pug
@@ -6,15 +6,12 @@ block content
     h1(class="text-base md:text-4xl font-bold mb-6 text-center text-white")=page
 
     div(class="mb-6")
-      form(action="/client/search" method="GET")
-        input(type="text" id='search' name="search" placeholder="Buscar cliente..." class="text-gray-300 text-sm py-2 w-full outline-none max-w-md px-4 rounded-md bg-gray-700 placeholder-gray-400 focus:ring-2 focus:ring-red-600" value=search) 
+      form(action="/client/search" method="GET" class="flex justify-end")
+        input(type="text" id='search' name="search" placeholder="Buscar cliente (nombre, apellido o teléfono)" class="text-gray-300 text-sm py-3 w-full outline-none max-w-2xl px-4 rounded-md bg-gray-700 placeholder-gray-400 focus:ring-2 focus:ring-red-600" value=search) 
         button(type="submit" class="ml-[-30px]" )
           <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6 text-white hover:text-indigo-300 mb-[-6px] ">
             <path stroke-linecap="round" stroke-linejoin="round" d="m15.75 15.75-2.489-2.489m0 0a3.375 3.375 0 1 0-4.773-4.773 3.375 3.375 0 0 0 4.774 4.774ZM21 12a9 9 0 1 1-18 0 9 9 0 0 1 18 0Z" />
           </svg>
-        div(class="mb-6")
-          p(class="text-red-600 font-bold text-sm")=message
-
 
     div(class="overflow-x-auto"  )
       table(class="w-full table-auto bg-gray-800 rounded-md shadow-lg" data-aos="zoom-in-down")
@@ -54,7 +51,7 @@ block content
       //- Paginación -->
       if clients.length
         if totalPages > 1
-          div(class="flex justify-end mt-4 gap-6")
+          div(class="flex justify-end mt-4 gap-6" data-aos="zoom-in-down" )
             if currentPage > 1
               a(href=`/client/panel?page=${currentPage - 1}` class="inline-block px-4 text-indigo-800 py-1 bg-indigo-400 hover:bg-indigo-600 hover:shadow-lg hover:shadow-gray-400 hover:text-white hover:scale-95 rounded-lg transition-all duration-400")
                 svg(xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6")
