--- a/views/device/create.pug
+++ b/views/device/create.pug
@@ -2,37 +2,41 @@ extends ../layouts/admin
 
 block content
   div(class="max-w-4xl mx-auto bg-gray-800 p-8 rounded-lg shadow-lg")
-    h2(class="text-base md:text-4xl font-bold text-center text-white mb-12 cssanimation hu__hu__")=page
+    h2(class="text-base md:text-4xl font-bold text-center text-white mb-12")=page
     form(action="/device/create" id="device-form" method="POST" enctype="multipart/form-data" class="grid grid-rows-auto gap-6 ")
       div(class="grid grid-cols-1 md:grid-cols-3 gap-6")
         div 
           label(for="client_id" class="block text-gray-300 font-semibold mb-2") Cliente
+            span.text-red-600.ml-1 *     
           select(name="client_id" id="client_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona un cliente-
             each client in clients
               option(value=client.id selected=device.client_id ? client.id == device.client_id : false )=`${client.name} ${client.last_name}`
           if errors
-            span(class="text-red-500 text-xs mx-2")=errors.client_id ? errors.client_id.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.client_id ? errors.client_id.msg : ""
         div 
           label(for="brand_id" class="block text-gray-300 font-semibold mb-2") Marca del Equipo
+            span.text-red-600.ml-1 *    
           select(name="brand_id" id="brand_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona una marca-
             each brand in brands 
               option(value= brand.id selected=device.brand_id ? brand.id == device.brand_id : false)=brand.name
           if errors
-            span(class="text-red-500 text-xs mx-2")=errors.brand_id ? errors.brand_id.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.brand_id ? errors.brand_id.msg : ""
         div 
           label(for="model_id" class="block text-gray-300 font-semibold mb-2") Modelo del Equipo
+            span.text-red-600.ml-1 *    
           select(name="model_id" id="model_id" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="") -Selecciona un modelo-
               each model in models 
                 option(value= model.id selected=device.model_id ? model.id == device.model_id : false)=model.name
           if errors
-            span(class="text-red-500 text-xs mx-2")=errors.model_id ? errors.model_id.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.model_id ? errors.model_id.msg : ""
 
       div(class="grid grid-cols-1 md:grid-cols-2 gap-6")
         div 
           label(for="problem_id" class="block text-gray-300 font-semibold mb-2") Falla del equipo
+            span.text-red-600.ml-1 *      
           select(name="problem_id" id="problem_id" class=" cursor-pointer w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600")
             option(value="" class="") -Selecciona un Falla-
             each category in categories
@@ -40,27 +44,29 @@ block content
                 each problem in category.problems
                   option(value=problem.id selected=device.problem_id ? problem.id == device.problem_id: false )=problem.description
           if errors
-            span(class="text-red-500 text-xs mx-2")=errors.problem_id ? errors.problem_id.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.problem_id ? errors.problem_id.msg : ""
 
         div 
           label(for="serial_number" class="block text-gray-300 font-semibold mb-2") Serial del equipo
+            span.text-red-600.ml-1 * 
+
           input(type="text" name="serial_number" id="serial_number" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600 " placeholder="Serial Ejemplo: 45NGFS88SE" value=device.serial_number ? device.serial_number : "")
           if errors
-            span(class="text-red-500 text-xs mx-2")=errors.serial_number ? errors.serial_number.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.serial_number ? errors.serial_number.msg : ""
 
       div(class="grid grid-cols-1")
         div
-          label(for="description" class="block text-gray-300 font-semibold mb-2") Descripción del equipo
+          label(for="description" class="block text-gray-300 font-semibold mb-2") Descripción del equipo       
             small.ml-2.text-gray-500 (Opcional)
           textarea(name="description" id="description" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Descripción del equipo" maxLength="100")=device.description ? device.description : ""
           p(id="count" class="count flex justify-end relative bottom-5  text-gray-400 text-xs mx-4") 0 / 100
 
       div(class="grid grid-cols-1")
         div
-          label(for="image" class="block text-gray-300 font-semibold mb-2") Imagen del equipo
+          label(for="image" class="block text-gray-300 font-semibold mb-2") Imagen del equipo 
           input(type="file" name="image" id="image" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600 cursor-progress" multiple accept="image/*" value="")
           if errors
-              span(class="text-red-500 text-xs mx-2")=errors.image ? errors.image.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.image ? errors.image.msg : ""
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-10")
         button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-gray-300 text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
