--- a/views/device/failures.pug
+++ b/views/device/failures.pug
@@ -14,14 +14,14 @@ block content
               each category in categories
                 option(value=category.id selected=failures.category_id ? category.id == failures.category_id : false class="text-gray-300")= category.name
           if errors
-            span(class="text-red-500 text-xs mx-2")=errors.category_id ? errors.category_id.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.category_id ? errors.category_id.msg : ""
 
         div 
           label(for="description" class="block text-gray-300 font-semibold mb-2") Descripción del problema
             span.text-red-600.ml-1 *
           input(type="text" name="description" id="description" class="w-full px-4 py-3 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Descripción de carateristica del problema" value=failures.description ? failures.description : "")
           if errors
-            span(class="text-red-500 text-xs mx-2")=errors.description ? errors.description.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.description ? errors.description.msg : ""
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-8")
         button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-white text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar    
