--- a/views/device/model.pug
+++ b/views/device/model.pug
@@ -8,9 +8,10 @@ block content
       div(class="grid grid-cols-1 md:grid-cols-1 gap-6")
         div 
           label(for="name" class="block text-gray-300 font-semibold mb-2") Modelo del Equipo
+            span.text-red-600.ml-1 *
           input(type="text" name="name" id="name" class="w-full px-4 py-3 rounded-md bg-gray-700 text-white focus:outline-none focus:ring-2 text-sm focus:ring-red-600" placeholder="Escriba el modelo del equipo" value=model.name ? model.name : "")
           if errors
-            span(class="text-red-500 text-xs mx-2")=errors.name ? errors.name.msg : ""
+            span(class="text-red-500 text-xs mx-2 errors")=errors.name ? errors.name.msg : ""
 
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-2 md:mt-5")
