--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -11,6 +11,8 @@ html(lang="en")
   rel="stylesheet")
     script(src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js")
     link(href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet")
+    link(rel="stylesheet"
+    href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css")
     link(rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css")
     link(rel="stylesheet" href="/css/app.css")
     link(rel="stylesheet" href="/css/styles.css")
@@ -40,6 +42,7 @@ html(lang="en")
       script(src="/js/inputs.js")
       script(src="/js/csrfTokenHeaders.js")
       script(src="https://unpkg.com/aos@next/dist/aos.js")
+      script(src="/js/setTimeout.js")  
       script.
         document.addEventListener('DOMContentLoaded', function(){
           AOS.init({
