--- a/views/device/received.pug
+++ b/views/device/received.pug
@@ -2,7 +2,7 @@ extends ../layouts/admin
 
 block content
   div(class="max-w-6xl mx-auto bg-gray-800 p-8 rounded-lg shadow-xl")
-    h2(class="text-base md:text-4xl font-bold text-center text-white mb-14 cssanimation hu__hu__")=page
+    h2(class="text-base md:text-4xl font-bold text-center text-white mb-14")=page
 
     div(class="mb-6")
       form(action="/device/received" method="GET" class="flex justify-end")
@@ -19,7 +19,11 @@ block content
         div(data-aos="fade-up"
           class="cursor-pointer w-full p-1 rounded-lg text-white space-y-4")
           div(class="bg-gray-700 rounded-bl-lg rounded-br-lg hover:-translate-y-1.5 transition-all duration-300 hover:shadow-red-400 hover:shadow-2xl ease-in-out")
-            img(src=`/uploads/${device.image[0].imagePath}` class="w-full h-40 rounded-tl-lg rounded-tr-lg object-cover")
+            if device.image && device.image.length > 0
+                img(src=`/uploads/${device.image[0].imagePath}` class="w-full h-40 rounded-tl-lg rounded-tr-lg object-cover")
+            else
+              img(src="/uploads/single-image.jpg" alt="Sin imagen" class="w-full h-40 rounded-tl-lg rounded-tr-lg object-cover")
+              
             div(class="space-y-4 pl-4 mt-4 text-lg")
               h3(class="font-bold ") Equipo:
                 span.ml-1.font-normal.text-base= device.model.name
