--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -7,12 +7,14 @@ html(lang="en")
     block styles
     link( rel="preconnect" href="https://fonts.googleapis.com")
     link(rel="preconnect" href="https://fonts.gstatic.com" crossorigin)
-    link(href="https://fonts.googleapis.com/css2?family=Poppins:wght@100;200;300;400;500;600;700&display=swap"
-  rel="stylesheet")
+    link(href="https://fonts.googleapis.com/css2?family=Patua+One&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet")
+
     script(src="https://unpkg.com/ionicons@4.5.10-0/dist/ionicons.js")
     link(href="https://cdn.jsdelivr.net/gh/yesiamrocks/cssanimation.io@1.0.3/cssanimation.min.css" rel="stylesheet")
     link(rel="stylesheet"
     href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css")
+    link(rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css")
     link(rel="stylesheet" href="https://unpkg.com/aos@next/dist/aos.css")
     link(rel="stylesheet" href="/css/app.css")
     link(rel="stylesheet" href="/css/styles.css")
@@ -33,6 +35,7 @@ html(lang="en")
           path(d="M93.9676 39.0409C96.393 38.4038 97.8624 35.9116 97.0079 33.5539C95.2932 28.8227 92.871 24.3692 89.8167 20.348C85.8452 15.1192 80.8826 10.7238 75.2124 7.41289C69.5422 4.10194 63.2754 1.94025 56.7698 1.05124C51.7666 0.367541 46.6976 0.446843 41.7345 1.27873C39.2613 1.69328 37.813 4.19778 38.4501 6.62326C39.0873 9.04874 41.5694 10.4717 44.0505 10.1071C47.8511 9.54855 51.7191 9.52689 55.5402 10.0491C60.8642 10.7766 65.9928 12.5457 70.6331 15.2552C75.2735 17.9648 79.3347 21.5619 82.5849 25.841C84.9175 28.9121 86.7997 32.2913 88.1811 35.8758C89.083 38.2158 91.5421 39.6781 93.9676 39.0409Z" fill="currentFill")
 
     block scripts
+      script(src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js")
       script(src="https://kit.fontawesome.com/0558074f37.js" crossorigin="anonymous")
       script(src="/js/sidebar.js")
       script(src="/js/formatPhone.js")
@@ -43,6 +46,8 @@ html(lang="en")
       script(src="/js/csrfTokenHeaders.js")
       script(src="https://unpkg.com/aos@next/dist/aos.js")
       script(src="/js/setTimeout.js")  
+      script(src="/js/swiper.js")
+
       script.
         document.addEventListener('DOMContentLoaded', function(){
           AOS.init({
