--- a/views/device/received.pug
+++ b/views/device/received.pug
@@ -37,7 +37,7 @@ block content
               a(href=`/device/details/${device.id}` data-title="Ver Detalles" class="font-bold text-sm text-yellow-400 hover:scale-95 shadow-md hover:shadow-gray-900 transition-all duration-300 rounded-md inline-block my-2 md:mb-4 flex items-center")
                 svg(xmlns="http://www.w3.org/2000/svg" class="w-9 h-9" fill="none" viewBox="0 0 24 24" stroke="currentColor")
                   path(fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="1.5" d="M7 6.5h9.75c2.107 0 3.16 0 3.917.506a3 3 0 0 1 .827.827C22 8.59 22 9.893 22 12M12 6.5l-.633-1.267c-.525-1.05-1.005-2.106-2.168-2.542C8.69 2.5 8.108 2.5 6.944 2.5c-1.816 0-2.724 0-3.406.38A3 3 0 0 0 2.38 4.038C2 4.72 2 5.628 2 7.444V10.5c0 4.179 0 6.505 1.02 8m3.637-2.93l2.062-.056c1.098-.03 1.647-.044 1.98.288c.331.332.316.88.287 1.979l-.055 2.062m-.295-3.979L5 21.5m17-6h-7m7 3h-7m3.5 3H15" color="currentColor")
-              a(href="#" data-title="Editar" class="font-bold text-sm hover:scale-95 shadow-md hover:shadow-gray-900 transition-all duration-300 rounded-md inline-block my-2 md:mb-4 flex items-center")
+              a(href=`/device/edit/${device.id}` data-title="Editar" class="font-bold text-sm hover:scale-95 shadow-md hover:shadow-gray-900 transition-all duration-300 rounded-md inline-block my-2 md:mb-4 flex items-center")
                 svg(xmlns="http://www.w3.org/2000/svg" class="w-11 h-11" viewBox="0 0 50 50")
                   g(fill="none" stroke-linecap="round" stroke-linejoin="round" stroke-width="2")
                     path(stroke="#fff" d="m28.708 27.188l-5.791-.105v-5.791L36.312 7.896a2.083 2.083 0 0 1 2.938 0l2.958 2.958a2.083 2.083 0 0 1 0 2.938z")
