--- a/views/device/edit.pug
+++ b/views/device/edit.pug
@@ -72,7 +72,7 @@ block content
             span(class="text-red-500 text-xs mx-2 errors")=errors.image ? errors.image.msg : ""
 
       div(class="flex flex-col md:flex-row gap-4 justify-center items-center mt-10")
-        button(type="button" id="cancelar-create" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-gray-300 text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
+        button(type="button" id="cancelar-device-edit" class="w-full md:w-3/6 cursor-pointer font-bold bg-red-600  hover:bg-red-800 text-gray-300 text-sm md:text-xl p-[7px] rounded-lg shadow-lg hover:shadow-gray-600 hover:scale-90 transition-all duration-300") Cancelar
 
         input(type="submit" class=" w-full md:w-3/6 cursor-pointer font-bold bg-gray-700 hover:bg-indigo-700 text-gray-300 text-sm md:text-xl rounded-lg shadow-lg hover:shadow-gray-700  hover:scale-90 p-[10px] transition-all duration-300" value="Ingresar Equipo")
 
