--- a/views/template/message-admin.pug
+++ b/views/template/message-admin.pug
@@ -9,4 +9,7 @@ block content
     if panel
       a(class= "block hover:bg-gray-700 text-white w-1/2 mx-auto rounded-lg my-5 p-3 text-center hover:outline hover:outline-offset-2 font-bold hover:outline-2 hover:scale-90 outline-red-500 shadow-lg transition-all duration-300 " href="/client/panel") Volver al Panel de Clientes
 
+    if edition
+      a(class= "block hover:bg-gray-700 text-white w-1/2 mx-auto rounded-lg my-5 p-3 text-center hover:outline hover:outline-offset-2 font-bold hover:outline-2 hover:scale-90 outline-red-500 shadow-lg transition-all duration-300 " href="/device/received") Volver a la página de equipos
+
     a(class= "block hover:bg-gray-700 text-white w-1/2 mx-auto rounded-lg my-5 p-3 text-center hover:outline hover:outline-offset-2 font-bold hover:outline-2 hover:scale-90 outline-red-500 shadow-lg transition-all duration-300 " href="/device/create") Crear Equipo
