--- a/views/device/edit.pug
+++ b/views/device/edit.pug
@@ -79,7 +79,7 @@ block content
 
                 // Eliminar Imagen
                 label(for=`delete-image-${image.id}` class="check-label text-sm font-normal cursor-pointer text-gray-400 hover:text-red-700") Eliminar
-                input(type="checkbox" name="deleteImages" id=`delete-image-${image.id}` value=image.id class="w-8 h-5 appearance-none check-input cursor-pointer border border-gray-300  rounded-md mr-2 hover:border-red-300 hover:bg-red-500 checked:bg-no-repeat checked:bg-center checked:border-red-300 checked:bg-red-600 hover:-translate-y-1.5 transition-all duration-300")
+                input(type="checkbox" name="deleteImages" id=`delete-image-${image.id}` value=image.id class="w-48 h-5 md:w-8 md:h-5 appearance-none check-input cursor-pointer border border-gray-300  rounded-md mr-2 hover:border-red-300 hover:bg-red-500 checked:bg-no-repeat checked:bg-center checked:border-red-300 checked:bg-red-600 hover:-translate-y-1.5 transition-all duration-300")
           else
             p.text-gray-400 Sin imágenes
 
