--- a/views/device/create.pug
+++ b/views/device/create.pug
@@ -64,7 +64,7 @@ block content
       div(class="grid grid-cols-1")
         div
           label(for="image" class="block text-gray-300 font-semibold mb-2") Imagen del equipo 
-          input(type="file" name="image" id="image" class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600 cursor-progress" multiple accept="image/*" value="")
+          input(type="file" name="image" id="image" class="w-full text-gray-300 font-medium text-base bg-gray-600 file:cursor-pointer cursor-pointer file:bordder-0 file:outline-none file:py-2 file:px-4 file:mr-4 file:bg-gray-800 file:hover:bg-gray-700 file:text-white rounded file:transition-all file:duration-300 " multiple accept="image/*" value="")
           if errors
             span(class="text-red-500 text-xs mx-2 errors")=errors.image ? errors.image.msg : ""
 
