--- a/views/device/edit.pug
+++ b/views/device/edit.pug
@@ -70,22 +70,22 @@ block content
           if evidenceImage.length 
             each image, index in evidenceImage
               div(class="mb-4 flex items-center gap-4")
-
-                img(src=`/uploads/${image.imagePath}`, alt="Imagen actual", class="w-12 h-12 md:w-28 md:h-28 rounded-lg object-cover")
+                a(href=`/uploads/${image.imagePath}` class="w-12 h-12 md:w-36 md:h-28")
+                  img(src=`/uploads/${image.imagePath}` alt="Imagen actual", class="w-full h-full rounded-lg object-cover")
 
                 // Reemplazar Imagen
-                label(for=`replace-image-${image.id}` class="text-sm text-gray-300") Reemplazar imagen
-                input(type="file" name= `replaceImages_${image.id}` id=`replace-image-${image.id}` data-image-id=image.id class="text-gray-300 block w-full text-xs" accept="image/*")
+                label(for=`replace-image-${image.id}` class="text-xs md:text-sm cursor-pointer text-gray-300") Reemplazar imagen
+                input(type="file" name= `replaceImages_${image.id}` id=`replace-image-${image.id}` data-image-id=image.id class="w-full text-gray-300 font-medium text-xs md:text-base bg-gray-600 file:cursor-pointer cursor-pointer file:bordder-0 file:outline-none file:py-2 file:px-4 file:mr-4 file:bg-gray-800 file:hover:bg-gray-700 file:text-white rounded file:transition-all file:duration-300 hidden md:flex" accept="image/*")
 
                 // Eliminar Imagen
                 label(for=`delete-image-${image.id}` class="check-label text-sm font-normal cursor-pointer text-gray-400 hover:text-red-700") Eliminar
-                input(type="checkbox" name="deleteImages" id=`delete-image-${image.id}` value=image.id class="w-48 h-5 md:w-8 md:h-5 appearance-none check-input cursor-pointer border border-gray-300  rounded-md mr-2 hover:border-red-300 hover:bg-red-500 checked:bg-no-repeat checked:bg-center checked:border-red-300 checked:bg-red-600 hover:-translate-y-1.5 transition-all duration-300")
+                input(type="checkbox" name="deleteImages" id=`delete-image-${image.id}` value=image.id class="w-6 h-5 md:w-8 md:h-5 appearance-none check-input cursor-pointer border border-gray-300 rounded-md mr-2 hover:border-red-300 hover:bg-red-500 checked:bg-no-repeat checked:bg-center checked:border-red-300 checked:bg-red-600 hover:-translate-y-1.5 transition-all duration-300")
           else
             p.text-gray-400 Sin imágenes
 
       // Subir Nuevas Imágenes
       label(for="newImages" class="block text-gray-300 font-semibold mb-2 mt-4") Agregar Nuevas Imágenes (Opcional)
-      input(type="file" name="newImages" id="newImages" multiple class="w-full px-4 py-2 rounded-md bg-gray-700 text-gray-300 focus:outline-none focus:ring-2 text-sm focus:ring-red-600 cursor-pointer" accept="image/*")
+      input(type="file" name="newImages" id="newImages" multiple class="w-full text-gray-300 font-medium text-base bg-gray-600 file:cursor-pointer cursor-pointer file:bordder-0 file:outline-none md:file:py-2 file:px-4 file:mr-4 file:bg-gray-800 file:hover:bg-gray-700 file:text-white rounded file:transition-all file:duration-300" accept="image/*")
 
       if errors
         span(class="text-red-500 text-xs mx-2 errors")= errors.image ? errors.image.msg : ""
