--- a/views/device/details.pug
+++ b/views/device/details.pug
@@ -56,7 +56,7 @@ block content
             textArea(id="description" class="w-full  md:text-base text-sm bg-gray-800 p-2 rounded-lg outline-none" disabled)= devices.description ? devices.description : "No hay descripción"
 
         div
-          a(href="#" class="font-[Poppins] inline-block w-full bg-red-700 text-white text-base text-center uppercase py-1 rounded hover:bg-indigo-600 hover:scale-95 shadow-md hover:shadow-gray-400 focus:ring-2 transition-all duration-300 ease-in-out") Enviar a reparación 
+          a(href=`/repairs/diagnostic/${devices.id}` class="font-[Poppins] inline-block w-full bg-red-700 text-white text-base text-center uppercase py-1 rounded hover:bg-indigo-600 hover:scale-95 shadow-md hover:shadow-gray-400 focus:ring-2 transition-all duration-300 ease-in-out") Enviar a reparación 
 
 
     if errors
