--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -47,6 +47,8 @@ html(lang="en")
       script(src="https://unpkg.com/aos@next/dist/aos.js")
       script(src="/js/setTimeout.js")  
       script(src="/js/swiper.js")
+      //- flowbite calendario
+      script(src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/datepicker.min.js")
 
       script.
         document.addEventListener('DOMContentLoaded', function(){
