Modificando el código del diagnostico

--- a/views/layouts/admin.pug
+++ b/views/layouts/admin.pug
@@ -48,7 +48,7 @@ html(lang="en")
       script(src="/js/setTimeout.js")  
       script(src="/js/swiper.js")
       //- flowbite calendario
-      script(src="https://cdnjs.cloudflare.com/ajax/libs/flowbite/2.3.0/datepicker.min.js")
+      script(src="/js/datePicker.js")
 
       script.
         document.addEventListener('DOMContentLoaded', function(){
